ビューファイルの作成

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -5,7 +5,7 @@
     <div class="col-md-5 p-lg-5 mx-auto my-5">
       <h1 class="display-4 font-weight-normal">コンビニ健康管理</h1>
       <p class="lead font-weight-normal">あなたに合わせた食事を提案し、栄養管理を行うアプリです</p>
-      <a class="btn btn-outline-secondary" href="#">現在のオススメ »</a>
+      <a class="btn btn-outline-secondary" href="/orders/new">現在のオススメ »</a>
     </div>
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
