--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -15,45 +15,45 @@
 <div class="container-fluid">
   <div class="row">
     <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+    <h2>商品選択</h2>
       <div class="sidebar-sticky pt-3">
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
-              Dashboard <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
-              Orders
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
-              Products
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
-              Customers
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart-2"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
-              Reports
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers"><polygon points="12 2 2 7 12 12 22 7 12 2"></polygon><polyline points="2 17 12 22 22 17"></polyline><polyline points="2 12 12 17 22 12"></polyline></svg>
-              Integrations
-            </a>
-          </li>
-        </ul>
+        <%= form_with model: @order, url:new_order_path, local: true do |f| %>
+          <div class="article-box">
+            おにぎり
+            <%= f.collection_select(:onigiri_id, Onigiri.all, :id, :name, {}, {class:"menu-select"}) %>
+          </div>
+          <div class="article-box">
+            お弁当
+            <%= f.collection_select(:bento_id, Bento.all, :id, :name, {}, {class:"menu-select"}) %>
+          </div>
+          <div class="article-box">
+            惣菜パン
+            <%= f.collection_select(:bread_id, Bread.all, :id, :name, {}, {class:"menu-select"}) %>
+          </div>
+          <div class="article-box">
+            菓子パン
+            <%= f.collection_select(:sweet_bread_id, SweetBread.all, :id, :name, {}, {class:"menu-select"}) %>
+          </div>
+          <div class="article-box">
+            サンドウィッチ
+            <%= f.collection_select(:sandwich_id, Sandwich.all, :id, :name, {}, {class:"menu-select"}) %>
+          </div>
+          <div class="article-box">
+            サラダ・スープ
+            <%= f.collection_select(:salad_soup_id, SaladSoup.all, :id, :name, {}, {class:"menu-select"}) %>
+          </div>
+          <div class="article-box">
+            揚げ物
+            <%= f.collection_select(:fry_id, Fry.all, :id, :name, {}, {class:"menu-select"}) %>
+          </div>
+          <div class="article-box">
+            デザート
+            <%= f.collection_select(:dessert_id, Dessert.all, :id, :name, {}, {class:"menu-select"}) %>
+          </div>
+          
+          <%= f.submit "購入する" ,class:"btn" %>
+        <% end %>
+          
 
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
           <span>Saved reports</span>
@@ -92,7 +92,7 @@
 
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4"><div class="chartjs-size-monitor" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div>
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">現在のオススメ</h1>
+        <h1 class="h2">栄養足りてる？</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="btn-group mr-2">
             <button type="button" class="btn btn-sm btn-outline-secondary"><<</button>
@@ -100,8 +100,7 @@
           </div>
         </div>
       </div>
-      <p>シャケおにぎり<p>
-      <p>豚汁<p>
+      
       <!--raderグラフを挿入-->
       <canvas id="myChart"></canvas>
       <script>
@@ -109,14 +108,14 @@
         var myChart = new Chart(ctx, {
           type: 'radar',
           data: {
-            labels: ["糖質", "タンパク質", "脂質", "ビタミン", "ミネラル"],
+            labels: ["糖質", "タンパク質", "脂質", "ビタミン"],
             datasets: [{
-              label: 'ランチセット（今なら１００円引き！）',
+              label: '選択した商品',
               backgroundColor: "rgba(255, 0, 0, 0.2)",
               borderColor: "rgba(255, 0, 0, 0.2)",
               pointBorderWidth: 1,
               pointHitRadius:5,
-              data: [20, 20, 20, 20, 20]
+              data: [20, 20, 20, 20]
             }]
           }
         });
@@ -129,33 +128,28 @@
           <p>合計: 800kcal<p>
         </div>
       </div>
+      
       <!--raderグラフを挿入-->
-      <h2>Section title</h2>
+      <h2>選択した商品</h2>
       <div class="table-responsive">
         <table class="table table-striped table-sm">
           <thead>
             <tr>
-              <th>#</th>
-              <th>Header</th>
-              <th>Header</th>
-              <th>Header</th>
-              <th>Header</th>
+              <th>商品名</th>
+              <th>カロリー</th>
+              <th>金額</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>1,001</td>
-              <td>Lorem</td>
-              <td>ipsum</td>
-              <td>dolor</td>
-              <td>sit</td>
+              <td>シャケおにぎり</td>
+              <td>150kcal</td>
+              <td>120円（税込み）</td>
             </tr>
             <tr>
-              <td>1,002</td>
-              <td>amet</td>
-              <td>consectetur</td>
-              <td>adipiscing</td>
-              <td>elit</td>
+              <td>サラダ</td>
+              <td>100kcal</td>
+              <td>200円（税込み）</td>
             </tr>
            
           </tbody>
