選択した商品を買い物カゴに追加する実装

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,6 +1,6 @@
 <body class="vsc-initialized">
     <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">Welcome</a>
+  <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="/">Welcome</a>
   <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -20,11 +20,11 @@
         <%= form_with model: @order, url:orders_path, local: true do |f| %>
           <div class="article-box">
             おにぎり
-            <%= f.collection_select(:onigiri_id, Onigiri.all, :id, :name, {}, {class:"menu-select"}) %>
+            <%= f.collection_select(:onigiri_id, Onigiri.all, :id, :name, {}, {class:"onigiri-select"}) %>
           </div>
           <div class="article-box">
             お弁当
-            <%= f.collection_select(:bento_id, Bento.all, :id, :name, {}, {class:"menu-select"}) %>
+            <%= f.collection_select(:bento_id, Bento.all, :id, :name, {}, {class:"bento-select"}) %>
           </div>
           <div class="article-box">
             惣菜パン
@@ -154,7 +154,7 @@
       <!--raderグラフを挿入-->
       <h2>選択した商品</h2>
       <div class="table-responsive">
-        <table class="table table-striped table-sm">
+        <table class="table table-striped table-sm" id = 'table-set'>
           <thead>
             <tr>
               <th>商品名</th>
@@ -162,14 +162,16 @@
               <th>金額</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <td id = 'order-name'>シャケおにぎり</td>
-              <td id = 'order-kcal'>150kcal</td>
-              <td id = 'order-price'>120円（税込み）</td>
-            </tr>
-
+          <tbody id = 'table-body'>
+            
           </tbody>
+          <tfoot>
+            <tr>
+              <td>合計</td>
+              <td>kcal</td>
+              <td>円（税込み）</td>
+            </tr>
+          </tfoot>
         </table>
       </div>
     </main>
